# dora

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: documentation.yml  linter.yml  tests.yml
dora/: __init__.py  conf.py  distrib.py  git_save.py  hydra.py  lightning.py  log.py  shep.py
